--- a/front-end/src/assets/style/search.css
+++ b/front-end/src/assets/style/search.css
@@ -7,6 +7,14 @@
 .search_page {
 }
 
+.search_page h1 {
+    display: inline;
+}
+
+.search_page .search_page_header {
+    padding-bottom: 15px;
+}
+
 .search_page .search_result_item {
     background-color: white;
     border: 1px solid #E8E8E8;
