Add some basic styling to the search page with the understanding that final designs are not complete yet

--- a/front-end/src/assets/style/search.css
+++ b/front-end/src/assets/style/search.css
@@ -4,9 +4,6 @@
     background-color: #F8F8F8;
 }
 
-.search_page {
-}
-
 .search_page h1 {
     display: inline;
 }
@@ -22,4 +19,8 @@
     padding: 20px;
     margin-bottom: 25px;
     border-radius: 7px;
+}
+
+.search_page .search_result_content {
+    padding-top: 60px;
 }
