--- a/front-end/src/assets/style/search.css
+++ b/front-end/src/assets/style/search.css
@@ -16,11 +16,14 @@
     background-color: white;
     border: 1px solid #E8E8E8;
     box-shadow: 5px 6px 8px #E8E8E8;
-    padding: 20px;
     margin-bottom: 25px;
-    border-radius: 7px;
+    border-radius: 10px;
+}
+
+.search_page .search_result_image img {
+    padding-left: 15px;
 }
 
 .search_page .search_result_content {
-    padding-top: 60px;
+    padding: 40px 0 20px 0;
 }
