--- a/front-end/src/assets/style/search.css
+++ b/front-end/src/assets/style/search.css
@@ -9,6 +9,10 @@
     box-shadow: 0 1px 2px 0 #b2b9c4;
 }
 
+.search_page .search_results {
+    min-height: 400px;
+}
+
 .search_page .search_result_item {
     background-color: white;
     border: 1px solid #ced6e1;
