--- a/front-end/src/assets/style/search.css
+++ b/front-end/src/assets/style/search.css
@@ -4,6 +4,10 @@
     background-color: #FAFBFD;
 }
 
+.search_page {
+    width: 100% !important;
+}
+
 .search_page_header {
     background-color: white;
     box-shadow: 0 1px 2px 0 #b2b9c4;
